--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Jaguar Sound | Piplod - Devgadh Baria</title>
+    <meta name="description" content="Jaguar Sound is a professional DJ service provider in Piplod - Devgadh Baria. We provide a wide range of services for all types of events.">
+    <meta name="keywords" content="Jaguar Sound, DJ, Piplod, Devgadh Baria, DJ Service, DJ Service Provider, DJ Service in Piplod, DJ Service in Devgadh Baria, DJ Service in Gujarat, DJ Service in India">
+    <meta name="author" content="Jaguar Sound">
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
+    <meta name="bingbot" content="index, follow">
+    <meta name="yandexbot" content="index, follow">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
